--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,7 +10,6 @@
 @import "blocks/flat.scss";
 @import "blocks/container-grid.scss";
 @import "blocks/container-edge.scss";
-@import "blocks/container-background.scss";
-
+@import "blocks/close-btn.scss";
 @import "blocks/btn.scss";
 
