--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -59,23 +59,79 @@ img {
   overflow-x: hidden; }
 
 .page-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  min-height: 100vh;
   margin: 0;
   overflow: hidden; }
 
-.container-grid {
+.page-body {
+  margin: 0;
+  overflow: hidden; }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  margin: auto;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 1200px;
+  height: 226px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
+  border-radius: 8px; }
+
+.flat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.flat__description-list {
   display: grid;
-  grid-template-columns: 66.2% 31.9%;
-  -webkit-column-gap: 32px;
-     -moz-column-gap: 32px;
-          column-gap: 32px; }
+  grid-template-columns: repeat(3, 1fr);
+  -webkit-column-gap: 2%;
+     -moz-column-gap: 2%;
+          column-gap: 2%; }
+
+.flat__description,
+.flat__description-term {
+  min-width: 120px; }
+  .flat__description:nth-of-type(-n + 2),
+  .flat__description-term:nth-of-type(-n + 2) {
+    grid-column: 1 / 2; }
+  .flat__description:nth-of-type(n + 3):nth-of-type(-n + 4),
+  .flat__description-term:nth-of-type(n + 3):nth-of-type(-n + 4) {
+    grid-column: 2 / 3; }
+  .flat__description:nth-of-type(n + 5),
+  .flat__description-term:nth-of-type(n + 5) {
+    grid-column: 3 / -1; }
+
+.flat__description {
+  margin: 0;
+  margin-bottom: 12px;
+  font-weight: 500;
+  color: #383736; }
+  .flat__description:nth-of-type(2n + 1) {
+    grid-row: 2 / 3; }
+  .flat__description:nth-of-type(2n) {
+    grid-row: 4 / 5; }
+
+.flat__description-term {
+  color: #989691; }
+  .flat__description-term:nth-of-type(2n + 1) {
+    grid-row: 1 / 2; }
+
+.flat__conditions-view,
+.flat__conditions-bank {
+  margin: 0;
+  padding-top: 6px;
+  padding-right: 16px;
+  padding-bottom: 6px;
+  padding-left: 36px;
+  font-weight: 500;
+  font-size: 12px;
+  border-radius: 22px; }
 
 .container-edge {
   margin: 0 auto;
@@ -94,20 +150,19 @@ img {
 
 .container-background {
   position: relative;
-  background-color: #f5f6f8; }
+  background-color: #e5e5e5; }
 
 .btn {
-  padding: 9px 6px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  font-family: "Roboto", "Arial", "sans-serif";
-  color: #ffffff;
-  background-color: #4496f6;
+  padding: 12px 50px;
+  font-weight: 500;
+  color: #383736;
+  background-color: #fac62d;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   cursor: pointer; }
-  .btn:hover, .btn:active {
-    background-color: #347db8; }
+  .btn:hover {
+    background-color: #f0b505; }
+  .btn:active {
+    background-color: #e1ab08; }
 
 /*# sourceMappingURL=style.css.map */
