--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,14 +1,18 @@
 .modal {
-  position: fixed;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 10;
-  margin: auto;
-  transform: translateY(-50%);
-  width: 1200px;
+  margin: 0 auto;
+  margin-top: 40px;
+  max-width: 1200px;
   height: 226px;
   background-color: #ffffff;
   box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
   border-radius: 8px;
+
+  &--flat {
+    display: grid;
+    grid-template-columns: 0.5fr 2.5fr 0.97fr;
+    padding-top: 24px;
+    padding-right: 2.5%;
+    padding-bottom: 31px;
+    padding-left: 5.9%;
+  }
 }
