Вносит правки в стили на соответствие макету

--- a/source/sass/blocks/close-btn.scss
+++ b/source/sass/blocks/close-btn.scss
@@ -1,9 +1,9 @@
 .close-btn {
   position: absolute;
   top: 13px;
-  right: 14px;
-  width: 28px;
-  height: 28px;
+  right: 15px;
+  width: 24px;
+  height: 24px;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -12,9 +12,9 @@
   &::after {
     position: absolute;
     content: "";
-    top: 13px;
-    right: 3px;
-    width: 24px;
+    top: 50%;
+    right: 2px;
+    width: 20px;
     height: 2px;
     background-color: #c4c4c4;
   }
@@ -31,10 +31,15 @@
   &:focus {
     background-color: #f5f4f2;
     border-radius: 4px;
+    width: 28px;
+    height: 28px;
+    top: 11px;
+    right: 14px;
 
     &::before,
     &::after {
       background-color: #383736;
+      right: 3px;
     }
   }
 
