--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -60,70 +60,92 @@ img {
 
 .page-body {
   margin: 0;
-  overflow: hidden; }
+  overflow: hidden;
+  background-color: #f5f4f2; }
 
 .page-body {
   margin: 0;
-  overflow: hidden; }
+  overflow: hidden;
+  background-color: #f5f4f2; }
 
 .modal {
-  position: fixed;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 10;
-  margin: auto;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 1200px;
+  margin: 0 auto;
+  margin-top: 40px;
+  max-width: 1200px;
   height: 226px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
           box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
   border-radius: 8px; }
+  .modal--flat {
+    display: grid;
+    grid-template-columns: 0.5fr 2.5fr 0.97fr;
+    padding-top: 24px;
+    padding-right: 2.5%;
+    padding-bottom: 31px;
+    padding-left: 5.9%; }
 
-.flat {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
+.flat__plan-link {
+  display: block;
+  margin-top: 10px;
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1; }
+
+.flat h1 {
+  margin: 0;
+  margin-bottom: 6px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: #383736; }
 
 .flat__description-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  -webkit-column-gap: 2%;
-     -moz-column-gap: 2%;
-          column-gap: 2%; }
+  margin: 0;
+  margin-bottom: 7px;
+  width: 64.7%;
+  min-width: 330px; }
 
-.flat__description,
-.flat__description-term {
-  min-width: 120px; }
-  .flat__description:nth-of-type(-n + 2),
-  .flat__description-term:nth-of-type(-n + 2) {
-    grid-column: 1 / 2; }
-  .flat__description:nth-of-type(n + 3):nth-of-type(-n + 4),
-  .flat__description-term:nth-of-type(n + 3):nth-of-type(-n + 4) {
-    grid-column: 2 / 3; }
-  .flat__description:nth-of-type(n + 5),
-  .flat__description-term:nth-of-type(n + 5) {
-    grid-column: 3 / -1; }
+.flat__description:nth-of-type(-n + 2),
+.flat__description-term:nth-of-type(-n + 2) {
+  grid-column: 1 / 2; }
+
+.flat__description:nth-of-type(n + 3):nth-of-type(-n + 4),
+.flat__description-term:nth-of-type(n + 3):nth-of-type(-n + 4) {
+  grid-column: 2 / 3; }
+
+.flat__description:nth-of-type(n + 5),
+.flat__description-term:nth-of-type(n + 5) {
+  grid-column: 3 / -1; }
 
 .flat__description {
   margin: 0;
-  margin-bottom: 12px;
+  margin-top: -2px;
+  margin-bottom: 10px;
   font-weight: 500;
   color: #383736; }
   .flat__description:nth-of-type(2n + 1) {
     grid-row: 2 / 3; }
   .flat__description:nth-of-type(2n) {
-    grid-row: 4 / 5; }
+    grid-row: 4 / 5;
+    margin-top: -5px; }
 
 .flat__description-term {
+  font-size: 12px;
   color: #989691; }
   .flat__description-term:nth-of-type(2n + 1) {
     grid-row: 1 / 2; }
 
+.flat__conditions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
 .flat__conditions-view,
 .flat__conditions-bank {
+  position: relative;
   margin: 0;
   padding-top: 6px;
   padding-right: 16px;
@@ -132,11 +154,89 @@ img {
   font-weight: 500;
   font-size: 12px;
   border-radius: 22px; }
+  .flat__conditions-view::before, .flat__conditions-view::after,
+  .flat__conditions-bank::before,
+  .flat__conditions-bank::after {
+    position: absolute;
+    content: "";
+    top: 45%;
+    left: 20px; }
+
+.flat__conditions-bank {
+  color: #eb4b51;
+  background-color: #faf0f0; }
+  .flat__conditions-bank::before, .flat__conditions-bank::after {
+    width: 12px;
+    height: 2px;
+    background-color: #eb4b51; }
+  .flat__conditions-bank::before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .flat__conditions-bank::after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+
+.flat__conditions-view {
+  margin-right: 17px;
+  color: #64b851;
+  background-color: #f2faf0; }
+  .flat__conditions-view::before, .flat__conditions-view::after {
+    height: 2px;
+    background-color: #64b851; }
+  .flat__conditions-view::before {
+    width: 12px;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+  .flat__conditions-view::after {
+    width: 5px;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+
+.flat__info {
+  min-width: 237px; }
+
+.flat__info p {
+  margin: 0; }
+
+.flat__info time {
+  font-weight: 500;
+  color: #2794db; }
+
+.flat__info span {
+  font-weight: 500;
+  color: #eb4b51; }
+
+.flat__info-title {
+  color: #989691; }
+
+.flat__info .flat__info-cost {
+  margin-bottom: 14px;
+  max-width: 210px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: #383736; }
+  .flat__info .flat__info-cost--another {
+    margin-bottom: 23px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #989691; }
+
+.flat__info .flat__info-accept {
+  display: block;
+  min-width: 100%;
+  padding-left: 27%;
+  background-image: url("../../img/svg/icon-key.svg"); }
+
+.container-grid {
+  padding-left: calc(10% - 45px);
+  min-width: 41.3%; }
 
 .container-edge {
   margin: 0 auto;
-  padding-left: 16.8%;
-  padding-right: 16.3%; }
+  padding-left: 3.1%;
+  padding-right: 3.1%; }
 
 @media (max-width: 919px) {
   .container-edge {
@@ -148,12 +248,39 @@ img {
     padding-left: 15px;
     padding-right: 15px; } }
 
-.container-background {
-  position: relative;
-  background-color: #e5e5e5; }
+.close-btn {
+  position: absolute;
+  top: 13px;
+  right: 14px;
+  width: 28px;
+  height: 28px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer; }
+  .close-btn::before, .close-btn::after {
+    position: absolute;
+    content: "";
+    top: 13px;
+    right: 3px;
+    width: 24px;
+    height: 2px;
+    background-color: #c4c4c4; }
+  .close-btn::before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .close-btn::after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+  .close-btn:hover, .close-btn:focus {
+    background-color: #f5f4f2;
+    border-radius: 4px; }
+    .close-btn:hover::before, .close-btn:hover::after, .close-btn:focus::before, .close-btn:focus::after {
+      background-color: #383736; }
+  .close-btn:active {
+    background-color: #e7e4de; }
 
 .btn {
-  padding: 12px 50px;
+  padding: 13px 0;
   font-weight: 500;
   color: #383736;
   background-color: #fac62d;
