--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,8 +1,6 @@
 .modal {
   margin: 0 auto;
   margin-top: 40px;
-  max-width: 1200px;
-  height: 226px;
   background-color: #ffffff;
   box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
   border-radius: 8px;
@@ -10,10 +8,46 @@
   &--flat {
     position: relative;
     display: grid;
-    grid-template-columns: 0.5fr 2.5fr 0.97fr;
+    grid-template-columns: 0.61fr 2.5fr 1.01fr;
     padding-top: 24px;
     padding-right: 2.5%;
     padding-bottom: 31px;
     padding-left: 5.9%;
+    max-width: 1200px;
+    height: 226px;
+  }
+}
+
+@media (max-width: $desktop-width) {
+  .modal {
+    &--flat {
+      grid-template-columns: 1.25fr 2.5fr 2.1fr;
+      padding-left: 7.9%;
+      height: 314px;
+    }
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .modal {
+    &--flat {
+      grid-template-columns: 1fr 2.75fr;
+      row-gap: 41px;
+      padding-right: 4%;
+      padding-left: 4.4%;
+      height: 502px;
+    }
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .modal {
+    &--flat {
+      display: flex;
+      flex-direction: column;
+      padding-right: 4%;
+      padding-left: 4.4%;
+      height: 698px;
+    }
   }
 }
