--- a/source/sass/blocks/flat.scss
+++ b/source/sass/blocks/flat.scss
@@ -18,14 +18,12 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin: 0;
-  margin-bottom: 7px;
+  margin-bottom: 9px;
   width: 64.7%;
-  min-width: 330px;
 }
 
 .flat__description,
 .flat__description-term {
-
   &:nth-of-type(-n + 2) {
     grid-column: 1 / 2;
   }
@@ -42,7 +40,7 @@
 .flat__description {
   margin: 0;
   margin-top: -2px;
-  margin-bottom: 10px;
+  margin-bottom: 9px;
   font-weight: 500;
   color: #383736;
 
@@ -67,6 +65,7 @@
 
 .flat__conditions {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .flat__conditions-view,
@@ -144,7 +143,7 @@
     left: -12.5%;
     width: 1px;
     height: 178px;
-    background-color: #F0EEEB;
+    background-color: #f0eeeb;
   }
 }
 
@@ -185,9 +184,164 @@
 
 .flat__info .flat__info-accept {
   display: block;
-  min-width: 100%;
   padding-left: 27%;
   background-image: url("../../img/svg/icon-key.svg");
   background-repeat: no-repeat;
   background-position: 20% 50%;
+}
+
+@media (max-width: $desktop-width) {
+  .flat__description-list {
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 9px;
+    width: 87.6%;
+  }
+
+  .flat .flat__description,
+  .flat .flat__description-term {
+    &:nth-of-type(n + 5) {
+      grid-column: 2 / 3;
+    }
+
+    &:nth-of-type(4) {
+      grid-column: 1 / 2;
+    }
+  }
+
+  .flat .flat__description {
+    &:nth-of-type(4) {
+      grid-row: 6 / 7;
+    }
+
+    &:nth-of-type(5) {
+      grid-row: 4 / 5;
+    }
+
+    &:nth-of-type(6) {
+      grid-row: 6 / 7;
+    }
+  }
+
+  .flat .flat__description-term {
+    &:nth-of-type(4) {
+      grid-row: 5 / 6;
+    }
+
+    &:nth-of-type(5) {
+      grid-row: 3 / 4;
+    }
+
+    &:nth-of-type(6) {
+      grid-row: 5 / 6;
+    }
+  }
+
+  .flat__conditions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .flat__conditions-view {
+    margin-right: 17px;
+    margin-bottom: 8px;
+  }
+  .flat__info {
+    &::before {
+      left: -12%;
+      height: 266px;
+    }
+  }
+
+  .flat__info .flat__info-cost {
+    &--another {
+      margin-bottom: 111px;
+    }
+  }
+
+  .flat__info .flat__info-accept {
+    width: 96%;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .flat__plan-link {
+    margin-left: 22%;
+  }
+
+  .flat__description-list {
+    width: 64%;
+  }
+
+  .flat__info {
+    grid-column: 1 / -1;
+
+    &::before {
+      top: -26px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+    }
+  }
+
+  .flat__conditions {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .flat__info .flat__info-cost {
+    &--another {
+      margin-bottom: 24px;
+    }
+  }
+
+  .flat__info .flat__info-accept {
+    width: 100%;
+    padding-left: 40.9%;
+    background-position: 38.3% 50%;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .flat__plan-link {
+    margin: 0 auto;
+    margin-top: 2px;
+  }
+
+  .flat h1 {
+    margin-bottom: 15px;
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .flat__description-list {
+    width: 100%;
+    column-gap: 15px;
+  }
+
+  .flat__info {
+    margin-top: -2px;
+    margin-left: 2%;
+
+    &::before {
+      top: -20px;
+    }
+  }
+
+  .flat__info .flat__info-cost {
+    font-size: 20px;
+    line-height: 28px;
+
+    &--another {
+      margin-bottom: 14px;
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
+
+  .flat__info .flat__info-accept {
+    width: 100%;
+    padding-left: 26.9%;
+    background-position: 20% 50%;
+  }
 }
