--- a/source/sass/blocks/flat.scss
+++ b/source/sass/blocks/flat.scss
@@ -1,6 +1,7 @@
 .flat__plan-link {
   display: block;
   width: fit-content;
+  height: fit-content;
   margin-top: 10px;
   order: -1;
 }
@@ -65,7 +66,6 @@
 
 .flat__conditions {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .flat__conditions-view,
@@ -99,6 +99,7 @@
     height: 2px;
     background-color: #eb4b51;
   }
+
   &::before {
     transform: rotate(45deg);
   }
@@ -119,6 +120,7 @@
     height: 2px;
     background-color: #64b851;
   }
+
   &::before {
     width: 12px;
     transform: rotate(-45deg);
@@ -193,7 +195,7 @@
 @media (max-width: $desktop-width) {
   .flat__description-list {
     grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 9px;
+    margin-bottom: 7px;
     width: 87.6%;
   }
 
@@ -237,7 +239,6 @@
   }
 
   .flat__conditions {
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
@@ -246,6 +247,7 @@
     margin-right: 17px;
     margin-bottom: 8px;
   }
+
   .flat__info {
     &::before {
       left: -12%;
@@ -285,7 +287,6 @@
   }
 
   .flat__conditions {
-    display: flex;
     flex-direction: row;
   }
 
@@ -315,8 +316,13 @@
   }
 
   .flat__description-list {
-    width: 100%;
     column-gap: 15px;
+    margin-bottom: 6px;
+    width: 100%;
+  }
+
+  .flat__conditions {
+    flex-direction: column;
   }
 
   .flat__info {
@@ -333,7 +339,7 @@
     line-height: 28px;
 
     &--another {
-      margin-bottom: 14px;
+      margin-bottom: 16px;
       font-size: 14px;
       line-height: 20px;
     }
