--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   margin-top: 40px;
   background-color: #ffffff;
-  box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 2px 24px rgba(0, 0, 0, 0.04);
   border-radius: 8px;
 
   &--flat {
